--- a/public/index.html
+++ b/public/index.html
@@ -22,14 +22,6 @@
       crossorigin="anonymous"
     ></script>
     <link
-      href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Roboto:100&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap"
-      rel="stylesheet"
-    />
-    <link
       href="https://fonts.googleapis.com/css?family=Lato:100,300,400|Raleway:100,400,500,700,800,900&display=swap"
       rel="stylesheet"
     />
@@ -513,6 +505,11 @@
         </div>
       </div>
     </div>
+    <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBzwFcR1tSuszjACQkI67oXrQevIpBIuFo&callback="
+    async
+    defer
+  ></script>
     <script type="text/javascript" src="./css/slick/slick.js"></script>
     <script src="./js/css.js"></script>
     <script src="./js/index.js"></script>
