--- a/public/index.html
+++ b/public/index.html
@@ -383,7 +383,7 @@
           <img
             id="business-mag-img"
             class="ui big image"
-            src="./images/ha_cutout-1.png"
+            src="https://ha-images-02.s3-us-west-1.amazonaws.com/ha_cutout-1.png"
           />
         </div>
         <div style="padding-top: 5rem;" class="five wide left aligned column">
