--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,7 @@
                 <i class="store icon"></i> Store</a
               >
             </div>
-            <!-- <div class="four wide computer one wide mobile column"></div> -->
+            <div class="four wide computer only column"></div>
             <div class="four wide right aligned column">
               <a href="" class="sm-links"> <i class="large instagram icon"></i> </a>
               <a href="" class="sm-links"> <i class="large facebook icon"></i> </a>
@@ -191,23 +191,6 @@
             </p>
           </div>
         </div>
-        <!-- landing card  -->
-        <!-- <div class="six wide computer only center aligned column">
-              <div class="ui grid container" id="landing-card">
-                <p id="landing-card-header">
-                  The Web's Most Trusted Hair Directory
-                </p>
-                <p id="landing-card-text">
-                  In this directory, we have pooled together the best qualified
-                  professionals from multiple specialties who are located in
-                  your area. You are just a click away from finding a permanent
-                  solution to your hair-loss problem.
-                </p>
-                <button class="ui button" id="list-business-button">
-                  <i class="building icon"></i>List your Business
-                </button>
-              </div>
-            </div> -->
       </div>
       <div id="problems-section" class="row">
         <div style="margin-bottom: 5rem;" class="sixteen wide center aligned column">
