--- a/public/listing.html
+++ b/public/listing.html
@@ -61,7 +61,7 @@
         <div class="ui grid" id="landing-grid">
           <div id="back-column" class="one wide column">
             <div id="back-button">
-              <p class="top-button" id="sign-in">
+              <p class="top-button" id="back-p" >
                 <i class="left arrow icon"></i>
               </p>
             </div>
@@ -70,7 +70,7 @@
             <img
               style="margin-left: 1rem; padding: 0px;"
               id="ha-logo-image"
-              src="./images/logo-symbol-w.png"
+              src="./images/logo-symbol-01.png"
             />
           </div>
           <div style="padding: 1rem;" class="nine wide middle aligned column">
@@ -86,7 +86,6 @@
           <!-- register button  -->
           <div id="register-column" class="two wide column">
             <div
-              style="border-bottom: solid; border-color: #8b786d; border-width: 5px;"
               id="listBusiness-button"
             >
               <p style="color: white;" class="top-button" id="register">
