--- a/public/search.listings.html
+++ b/public/search.listings.html
@@ -53,14 +53,14 @@
         <div class="ui grid" id="landing-grid">
           <div id="back-column" class="one wide column">
             <div id="back-button">
-              <p class="top-button" id="sign-in"> <i class="left arrow icon"></i> </p>
+              <p class="top-button" id="sign-in" style="background: #f9f9f9;"> <i class="left arrow icon"></i> </p>
             </div>
           </div>
           <div style="padding: .5rem;" class="one wide column">
             <img
               style="margin-left: 1rem; padding: 0px;"
               id="ha-logo-image"
-              src="./images/logo-symbol-w.png"
+              src="./images/logo-symbol-01.png"
             />
           </div>
           <div style="padding: 1rem;" class="nine wide middle aligned column">
@@ -74,10 +74,12 @@
             </div>
           </div>
           <!-- register button  -->
-          <div id="register-column" class="two wide column">
+          <div id="register-column" class="two wide column"
+          >
             <div
-              style="border-bottom: solid; border-color: #8b786d; border-width: 5px;"
               id="listBusiness-button"
+              style="background: #1F7A8C;"
+
             >
               <p style="color: white;" class="top-button" id="register">
                 <i class="store icon"></i>List Your Business
@@ -101,7 +103,7 @@
                 <input id="search-search" type="text" placeholder="Search..." />
                 <button
                   id="search-button"
-                  style="background: #2ca6a4; color: white;"
+                  style="background: #1F7A8C; color: white;"
                   class="ui button"
                 >
                   Search
