zoho routes + styling

--- a/public/billing__new.html
+++ b/public/billing__new.html
@@ -46,27 +46,28 @@
   </head>
   <body>
     <div class="ui grid" id="page-container">
-      <div class="row" id="top-menu-row">
-        <div class="ui grid" id="landing-grid">
-          <div id="back-column" class="one wide column">
-            <div id="back-button">
-              <p class="top-button" id="sign-in">
-                <i class="left arrow icon"></i>
-              </p>
+          <!-- top menu  -->
+          <div class="row" id="top-menu-row">
+              <div class="ui grid" id="landing-grid">
+                <div id="back-column" class="one wide column">
+                  <div id="back-button">
+                    <p id="back-p" class="top-button" >
+                      <i class="left arrow icon"></i>
+                    </p>
+                  </div>
+                </div>  
+                <div style="padding: .5rem;" class="one wide computer only column">
+                  <img
+                    style="margin-left: 1rem; padding: 0px;"
+                    id="ha-logo-image"
+                    src="./images/logo-symbol-01.png"
+                  />
+                </div>
+                <div style="padding: 1rem;" class="six wide computer six wide mobile middle aligned column">
+                  <p id="ha-title">Hair Authority Directory</p>
+                </div>
+              </div>
             </div>
-          </div>
-          <div style="padding: .5rem;" class="one wide column">
-            <img
-              style="margin-left: 1rem; padding: 0px;"
-              id="ha-logo-image"
-              src="./images/logo-symbol-01.png"
-            />
-          </div>
-          <div style="padding: 1rem;" class="twelve wide middle aligned column">
-            <p id="ha-title">Hair Authority Directory</p>
-          </div>
-        </div>
-      </div>
       <div class="centered row">
         <div id="title-column" class="fifteen wide center aligned column">
             <p class="cta-title" >Pick a Payment Plan</p>
