--- a/public/index.html
+++ b/public/index.html
@@ -55,19 +55,22 @@
           <div style="padding: 1rem;" class="six wide computer six wide mobile middle aligned column">
             <p id="ha-title">Hair Authority Directory</p>
           </div>
+          <!-- dashboard column  -->
           <div id="dashboard-column" class="three wide column"></div>
+          <!-- sign in column  -->
           <div id="sign-in-column" class="three wide column">
             <!-- sign in button  -->
             <div id="sign-in-button">
               <p class="top-button" id="sign-in">Sign In</p>
             </div>
           </div>
-          <!-- register button  -->
+          <!-- list business column TITLE REGISTER COLUMN  -->
           <div id="register-column" class="three wide column">
+          <!-- list business button  -->
             <div
               id="listBusiness-button"
             >
-              <p style="color: #696969;" class="top-button listBusClick" id="register">
+              <p style="background: #696969; color: white;" class="top-button listBusClick" id="register">
                 <i class="store icon"></i>List Your Business
               </p>
             </div>
