--- a/public/sign-in.html
+++ b/public/sign-in.html
@@ -47,7 +47,7 @@
               <img
                 style="margin-left: 1rem; padding: 0px;"
                 id="ha-logo-image"
-                src="./images/logo-symbol-w.png"
+                src="./images/logo-symbol-01.png"
               />
             </div>
             <div style="padding: 1rem;" class="nine wide middle aligned column">
@@ -70,10 +70,10 @@
       <!-- top menu  -->
       
       <div class="row">
-        <div class="five wide column"></div>
-        <div class="six wide middle aligned column">
+        <div class="four wide computer three wide tablet three wide mobile column"></div>
+        <div class="eight wide computer ten wide tablet ten wide mobile middle aligned column">
           <div id="form-container">
-            <img class="ui centered small image" src="./images/Logo symbol-lb.png" >
+            <img class="ui centered small image" src="./images/logo-symbol-01.png" >
             <div id="form" class="ui equal width form">
               <!-- header  -->
                 <div class="field">
@@ -93,13 +93,14 @@
                     placeholder="Full Name"
                   />
                 </div>
+                <div id="submit-register" class="ha_button">Submit</div>
               <p id="noAccount">
-                Don't have an account? <a href="register.html">Sign up</a>
+                Don't have an account? <a id="no-account" >Sign up</a>
               </p>
             </div>
           </div>
         </div>
-        <div class="five wide column"></div>
+        <div class="four wide computer three wide tablet three wide mobile column"></div>
       </div>
     </div>
 
