--- a/public/register.html
+++ b/public/register.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>International Hair Authority</title>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"
@@ -16,7 +16,11 @@
       href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.7.8/dist/semantic.min.css"
     />
     <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.7.8/dist/semantic.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.1/axios.js" integrity="sha256-J6UlS3kpnhiSiNQ9lGoV9Q94ZpIPff3UZcR0dDwIT6g=" crossorigin="anonymous"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.1/axios.js"
+      integrity="sha256-J6UlS3kpnhiSiNQ9lGoV9Q94ZpIPff3UZcR0dDwIT6g="
+      crossorigin="anonymous"
+    ></script>
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Roboto:100&display=swap"
       rel="stylesheet"
@@ -29,52 +33,96 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"
     />
-
-    <link rel="stylesheet" type="text/css" href="./css/register.css" />
-</head>
-<body>
-    <div id="form-container">
-        <form id="register-form" class="ui equal width form">
-            <!-- header  -->
-            <div class="fields">
-              <div class="field">
-                <h1 id="register-form-header">Register</h1>
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:100,300,400|Raleway:100,400,500,700,800,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="./css/sign-in.css" />
+  </head>
+  <body>
+      <div class="row" id="top-menu-row">
+          <div class="ui grid" id="landing-grid">
+            <div style="padding: .5rem;" class="one wide column">
+              <img
+                style="margin-left: 1rem; padding: 0px;"
+                id="ha-logo-image"
+                src="./images/logo-symbol-01.png"
+              />
+            </div>
+            <div style="padding: 1rem;" class="nine wide middle aligned column">
+              <p id="ha-title">Hair Authority Directory</p>
+            </div>
+            <div id="dashboard-column" class="two wide column"></div>
+            <div id="sign-in-column" class="two wide column">
+              <!-- sign in button  -->
+              
+            </div>
+            <!-- register button  -->
+            <div id="register-column" class="two wide column">
+                <div id="sign-in-button">
+                    <p class="top-button" id="back"><i class="left arrow icon"></i>Back</p>
+                  </div>
+            </div>
+          </div>
+        </div>
+    <div class="ui grid" id="page-container">
+      <!-- top menu  -->
+      
+      <div class="row">
+        <div class="four wide computer three wide tablet three wide mobile column"></div>
+        <div class="eight wide computer ten wide tablet ten wide mobile middle aligned column">
+          <div id="form-container">
+            <img class="ui centered small image" src="./images/logo-symbol-01.png" >
+            <form id="register-form" class="ui equal width form">
+              <!-- header  -->
+                <div class="field">
+                  <h1 id="signIn-form-header">Sign up for Hair Authority Directory</h1>
+                </div>
+              <!-- first row  -->
+              <div class="fields">
+                  <div class="field">
+                      <label id="signIn-text">First Name</label>
+                      <input name="first_name" style="padding: 1rem;" id="first_name" type="text" placeholder="First Name" />
+                    </div>
+                    <div class="field">
+                        <label id="signIn-text">Last Name</label>
+                        <input name="last_name" style="padding: 1rem;" id="last_name" type="text" placeholder="Last Name" />
+                      </div>
               </div>
+              <div class="fields">
+                  <div class="field">
+                      <label id="signIn-text">Email</label>
+                      <input name="email" style="padding: 1rem;" id="email" type="email" placeholder="johnsmith@gmail.com" />
+                    </div>
+                    <div class="field">
+                        <label id="signIn-text">Phone</label>
+                        <input name="phone" style="padding: 1rem;" id="phone" type="text" placeholder="999-999-9999" />
+                      </div>
+              </div>
+              <div class="fields">
+                  <div class="field">
+                      <label id="signIn-text">Password</label>
+                      <input name="password" style="padding: 1rem;" id="password" type="password" placeholder="Minimum 8 characters..." />
+                    </div>
+                    <div class="field">
+                        <label id="signIn-text">Confirm Password</label>
+                        <input name="confirm_pswd" style="padding: 1rem;" id="confirm_pswd" type="password" placeholder="Minimum 8 characters..." />
+                      </div>
+              </div>
+              <div id="submit-register" style="width: 100%;"  class="ha_button">Create Account</div>
+              <p id="noAccount">
+                Already have an account? <a id="existing-account" >Sign In</a>
+              </p>
+              </form>
             </div>
-          <div class="fields">
-            <div class="field">
-              <label id="list-form-text">First Name</label>
-              <input id="first_name" name="first_name" type="text" placeholder="Full Name" />
-            </div>
-            <div class="field">
-              <label id="list-form-text">Last Name</label>
-              <input id="last_name" name="last_name" type="text" placeholder="Full Name" />
-            </div>
-        </div>
-        <div class="fields">
-          <div class="field">
-            <label id="list-form-text">Email</label>
-            <input id="email" name="email" type="email" placeholder="Full Name" />
           </div>
-          <div class="field">
-            <label id="list-form-text">Phone</label>
-            <input id="phone" name="phone" type="text" placeholder="Full Name" />
-          </div>
-      </div>
-      <div class="fields">
-        <div class="field">
-          <label id="list-form-text">Password</label>
-          <input id="password" name="password" type="password" placeholder="Full Name" />
         </div>
-        <div class="field">
-          <label id="list-form-text">Confirm Password</label>
-          <input id="confirm_pswd" name="confirm_pswd" type="password" placeholder="Full Name" />
-        </div>
+        <div class="four wide computer three wide tablet three wide mobile column"></div>
       </div>
-          <button class="ui button" id="register-submit" >Submit</button>
-        </form>
+    </div>
 
-
-    <script src='./js/register.js' ></script>
-</body>
+    <script src="./js/css.js"></script>
+    <script src="./js/register.js"></script>
+  </body>
 </html>
