styling form + hosted page links

--- a/public/listing.form.html
+++ b/public/listing.form.html
@@ -78,7 +78,7 @@
                     <div multiple="" class="ui fluid multiple selection dropdown">
                         <input type="hidden" name="category">
                         <i class="dropdown icon"></i>
-                        <div class="default text">--</div>
+                        <div class="default text">Select all that apply</div>
                         <div class="menu">
                           <div class="item" data-value="Dermatologist">
                             Dermatologist
