--- a/public/index.html
+++ b/public/index.html
@@ -200,24 +200,7 @@
         <div style="margin-bottom: 5rem;" class="sixteen wide center aligned column">
           <p id="problems-title">There Are So Many Solutions</p>
           <p id="problems-text">
-            Hair Authority Directory is the internet's most trusted source of
-            <strong class="serif-strong" style="color: #1F7A8C;"
-              >Specialists,</strong
-            >
-            <strong class="serif-strong" style="color: #1F7A8C;"
-              >Medical Treatments,</strong
-            >
-            <strong class="serif-strong" style="color: #1F7A8C;"
-              >Products,</strong
-            >
-            and
-            <strong class="serif-strong" style="color: #1F7A8C;"
-              >Associations.</strong
-            >
-            Let us help to find the
-            <strong class="serif-strong" style="color: #1F7A8C;">Best</strong>
-            solution for
-            <strong class="serif-strong" style="color: #1F7A8C;">You.</strong>
+              In this directory, we have pooled together the best qualified professionals from multiple specialties who are located in your area. You are just a click away from finding a permanent solution to your hair-loss problem.
           </p>
           <!-- <p id="steps-arrow-text">Here's How It Works</p>
           <i style="color: #696969;" class="down arrow icon"></i> -->
@@ -321,13 +304,14 @@
       >
         <div id="step-1" class="row">
           <div id="step-1-col-l" class="six wide computer sixteen wide mobile middle aligned column">
-            <p id="step-1-title">Browse.</p>
+            <p id="step-1-title">Why?</p>
             <div id="step-1-list" class="ui list step-list">
               <div style="margin-bottom: 2.5rem;" class="item">
                 <i style="color: #696969;" class="large map pin icon"></i>
                 <div class="content step-list-content">
                   <p id="step-1-content">
-                    Just type in the
+                      Hair Authority Directory™ was created to give men and women suffering from hair loss an information tool they can use with confidence to find the best qualified professionals and products. It is the most comprehensive, unbiased and user-friendly directory on the internet. It is managed by a team of hair loss professionals with over forty years of experience.
+                    <!-- Just type in the
                     <strong
                       style="font-size: 35px;font-weight: 700; color: #1F7A8C;"
                       >Title</strong
@@ -341,15 +325,15 @@
                       >Category</strong
                     >
                     and instantly search our directory of thousands of verified
-                    solutions.
+                    solutions. -->
                   </p>
-                  <div
+                  <!-- <div
                     id="step1-search"
                     style="padding: 1rem; "
                     class="box-button"
                   >
                     <span>Start Seaching <i class="sistrix icon"></i></span>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
@@ -375,13 +359,14 @@
             class="nine wide computer sixteen wide mobile middle aligned centered column"
           >
             <!-- <p id="step-2-num" class="title_l_blue">2.</p> -->
-            <p id="step-2-title">Find Results.</p>
+            <p id="step-2-title">Trustworthy</p>
             <div id="step-2-list" class="ui list step-list">
               <div style="margin-bottom: 2.5rem;" class="item">
                 <i style="color: #696969;" class="big search icon"></i>
                 <div class="content step-list-content">
                   <p id="step-2-content">
-                    Immediately find thousands of the
+                      This one-of-a-kind directory is 100% objective. It is not affiliated with any commercial or special interest group. It does not accept advertising and it does not promote or endorse any product or service. It allows you to compare alternate suppliers and make a rational decision about what is best for you. This is the only directory you will ever need.
+                    <!-- Immediately find thousands of the
                     <strong
                       style="font-size: 35px;font-weight: 700; color: #1F7A8C;"
                     >
@@ -401,7 +386,7 @@
                       style="font-size: 35px;font-weight: 700; color: #1F7A8C;"
                       >Top Specialists</strong
                     >
-                    for later.
+                    for later. -->
                   </p>
                 </div>
               </div>
@@ -411,13 +396,14 @@
         <div id="step-3" class="row">
           <div id="step-3-col-l" class="nine wide computer sixteen wide mobile middle aligned column">
             <div id="shadow-3">
-              <p id="step-3-title">Feel Like You.</p>
+              <p id="step-3-title">How We Are Different</p>
               <div id="step-3-list" class="ui list step-list">
                 <div style="margin-bottom: 2.5rem;" class="item">
                   <i style="color: #696969;" class="big child icon"></i>
                   <div class="content step-list-content">
                     <p id="step-3-content">
-                      Let any of our
+                        Unlike other special-interest groups and deep-pocket advertisers, the Hair Authority Directory is not beholden to any interest or commercial group. It lists every professional, flags special skills, professional affiliations, specialized training, and awards so you can find the best of the best.
+                      <!-- Let any of our
                       <strong
                         style="font-size: 35px;font-weight: 700; color: #1F7A8C;"
                         >Verified</strong
@@ -431,7 +417,7 @@
                       <strong
                         style="font-size: 35px;font-weight: 700; color: #1F7A8C;"
                         >Confidence.</strong
-                      >
+                      > -->
                     </p>
                   </div>
                 </div>
