ishrs + wts search click + rich text import

--- a/public/index.html
+++ b/public/index.html
@@ -208,28 +208,28 @@
           <div class="four wide computer eight wide mobile middle aligned column">
             <div class="ui grid">
               <div class="sixteen wide middle aligned column">
-                  <img src="./images/ISHRS.png" id="ishrs" class="ui centered image" >
+                  <img src="./images/ISHRS.png" id="ISHRS" class="ui centered image logo-click" >
               </div>
             </div>
           </div>
           <div class="four wide computer eight wide mobile middle aligned column">
             <div class="ui grid">
                 <div class="sixteen wide middle aligned column">
-                    <img src="./images/Artas.png" id="artas" class="ui centered image" >
+                    <img src="./images/Artas.png" id="artas" class="ui centered image logo-click" >
                 </div>
               </div>
             </div>
           <div class="four wide computer eight wide mobile middle aligned column">
             <div class="ui grid">
                 <div class="sixteen wide middle aligned column">
-                    <img src="./images/WTS.png" id="wts" class="ui centered image" >
+                    <img src="./images/WTS.png" id="Trichologist" class="ui centered image logo-click" >
                 </div>
               </div>
             </div>
           <div class="four wide computer eight wide mobile middle aligned column">
             <div class="ui grid">
                 <div class="sixteen wide middle aligned column">
-                    <img src="./images/Hair Club.webp" id="hair-club" class="ui centered image" >
+                    <img src="./images/Hair Club.webp" id="hair-club" class="ui centered image logo-click" >
                 </div>
               </div>
             </div>
